--- a/trunk/app/views/devise_mailer/invitation_instructions.html.erb
+++ b/trunk/app/views/devise_mailer/invitation_instructions.html.erb
@@ -12,7 +12,7 @@
     <table width="1" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:10px;font-size:10px;line-height:10px;">&nbsp;</div></td></tr></tbody></table>
   </td></tr>
   <tr><td align="left">
-    <img width="159" height="35" border="0" src="<%= mk_url(asset_path('logo_white.png')) %>">
+    <img width="159" height="35" border="0" src="<%= asset_url('logo_white.png')%>">
   </td></tr>
   <tr><td>
     <table width="1" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><div style="height:10px;font-size:10px;line-height:10px;">&nbsp;</div></td></tr></tbody></table>
