--- a/trunk/app/views/coursewares/mine.html.erb
+++ b/trunk/app/views/coursewares/mine.html.erb
@@ -45,19 +45,19 @@
 <div style="overflow:hidden;">
   <div class="uhead" style="height:60px;"><a href="<%= user_path current_user%>"><img src="<%=avatar_url(current_user,:mid60)%>" /></a></div>
   <div class="uinfo">
-    <p><a href="/profile/1141902" class="blue arial b"><%=current_user.name%></a></p>
+    <p><a href="" class="blue arial b"><%=current_user.name%></a></p>
     <p><%= current_user.tagline %></p>
   </div>
 </div>
 <ul class="useratten cf">
 <li>
-<a id="user_profile_medium_follow_count" class="gray block usernumber" href="/follow/1141902/1">
+<a id="user_profile_medium_follow_count" class="gray block usernumber" href="/users/<%= current_user.slug %>/following">
   <em><%=current_user.following_ids.size%></em><br />
 <span>关注</span>
 </a>
 </li>
 <li>
-<a id="user_profile_medium_fans_count" class="gray block usernumber" href="/fans/1141902/1">
+<a id="user_profile_medium_fans_count" class="gray block usernumber" href="/users/<%= current_user.slug %>/followers">
   <em><%=current_user.follower_ids.size%></em><br />
 <span>粉丝</span>
 </a>
