--- a/trunk/app/views/coursewares/new_youku.html.erb
+++ b/trunk/app/views/coursewares/new_youku.html.erb
@@ -41,7 +41,7 @@
       </div>
     </div>
   </div><!-- /steps -->
-  <p id="ok_to_leave" style="display:none">此时您可安全地离开本页面，我们将在云端自动处理您的课件。</p>
+  <p id="ok_to_leave" style="display:none">此时您可安全地离开本页面，我们将在后台自动处理您的课件。</p>
 </div>
         </div>
       </div>
