--- a/trunk/app/views/welcome/about.html.erb
+++ b/trunk/app/views/welcome/about.html.erb
@@ -20,6 +20,7 @@
 			<p>Kejian.TV 课件交流系统是中国最大的教育资源在线集散平台，同时，课件交流系统也是最专业的中文在线学习社区。</p>
 			<p>当然，目前这些仅是愿景，但我们正为此目标而不懈奋斗。</p>
 			<p>请点击左侧栏了解我们的团队。</p>
+      <p><a href="/">返回首页</a></p>
 		</div>
 		<div id="minqi">
 			<h2>潘旻琦 <em style="font-size:12px">工程师 & CTO</em></h2>
