--- a/trunk/app/views/welcome/index.html.erb
+++ b/trunk/app/views/welcome/index.html.erb
@@ -31,8 +31,8 @@
     </div>
   </section>
 	<section class="supplimental" id="featured">
-	<div class="wrapper">
-		<div class="main" style="width:988px;margin-left:2px">
+  <div class="wrapper"<% if @is_ie%> style="width:1100px;padding-left:136px"<% end %>>
+		<div class="main" style="width:100%;margin-left:2px">
 	  <% @latest_cw.each do |item| %>
     <% sz = [item.slides_count-1,50].min %>
     <div data-slide-count="<%= sz %>" data-id="<%= item.id %>" class="presentation">
@@ -62,7 +62,8 @@
 
 <%= render file:'/application/headers/_zm_header' %>
 
-<div class="tagchannel __zm">
+<div class=" __zm">
+<div class="tagchannel" style="padding-top:0">
 <div id="wrapper">
 <div id="nav" class="categorybody">
 <div class="navandshadow">
@@ -202,9 +203,7 @@ $('#categories_table > div').height($('#categories_table').height());
 </div>
 </div>
 
-<div class="__zm" style="margin-top:48px">
-<div class="notelayer" id="mainempty" style="display:none;">你关注的内容太少了，去<a href="/hot/" class="blue">热门频道</a>找找吧。</div>
-<div id="pagewrap">
+<div id="pagewrap" style="margin-top:48px">
   
 <!--banner begins-->
 
@@ -407,6 +406,7 @@ $('#core_addcw2').click(function(){return KTV.addCW()});
 </div>
 
 <div style="width:100%;height:28px"></div>
+</div>
 
 <script type="text/javascript">
 <% content_for :butt2 do %>
@@ -704,4 +704,4 @@ im.zm.autoImg.init({
 
 
 
-<%= render file:'/application/footers/_flo_footer' %>
+<%= render file:'/application/footers/_zm_footer' %>
