IE8基本可用，除了瀑布流2级触发

--- a/trunk/app/assets/javascripts/ktv/application.js.erb
+++ b/trunk/app/assets/javascripts/ktv/application.js.erb
@@ -14,12 +14,12 @@
 //= require jquery.metadata
 //= require jquery.masonry
 //= require jquery.zclip
-//= require jquery.ui.autocomplete.js
 //= require jquery.ui.mouse
 //= require jquery.ui.button
 //= require jquery.ui.draggable
 //= require jquery.ui.resizable
 //= require jquery.effects.core
+//= require jquery.placeholder
 //= require ./pin
 //= require ./ktv
 //= require_self
