--- a/trunk/app/assets/stylesheets/ktv/__zm_hoth.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/__zm_hoth.css.scss.erb
@@ -197,16 +197,12 @@
   overflow:hidden;
   }
 
-  a:hover img {
+  #content a:hover img {
   opacity:.8;
   filter:alpha(opacity=80);
   background-color:#fff;
   }
 
-  .bannerimg a:hover img,.cneterbanner a:hover img {
-  opacity:1;
-  filter:alpha(opacity=100);
-  }
 
   .gather-item a.tugeTitle {
   display:inline-block;
