--- a/trunk/app/assets/stylesheets/ktv/ppt.css.scss.erb
+++ b/trunk/app/assets/stylesheets/ktv/ppt.css.scss.erb
@@ -120,6 +120,7 @@ body {
     display: none;
 }
 #share {
+   display:none;/* todo */
     position: absolute;
     opacity: 0;
     z-index: -1;
@@ -300,6 +301,8 @@ a:hover {
 .header h5 {
     float: left;
     line-height: 24px;
+    height:24px;
+    overflow:hidden;
 }
 .header h5 a {
     color: #ccc;
@@ -307,6 +310,9 @@ a:hover {
 .header p {
     float: right;
     line-height: 24px;
+    height:24px;
+    overflow:hidden;
+    text-align:right;
 }
 .fullscreen .header {
     -webkit-border-radius: 0;
