--- a/trunk/app/views/topics/show.html.erb
+++ b/trunk/app/views/topics/show.html.erb
@@ -62,7 +62,7 @@
 		<div style="clear: both;">
 		</div>
 		<div id="contentMain" class="content" style="position: relative;">
-			<div id="rightLabel1" class="rightbox" style="display:none;right:350px; margin-top: -60px">
+			<div id="rightLabel1" class="rightbox" style="display:none;right:350px; margin-top: -60px;overflow:hidden">
 				<div class="userbox topline">
 					<div class="userinfo">
 						<div class="uheadbig">
