--- a/trunk/app/assets/javascripts/ktv/pin.js.erb
+++ b/trunk/app/assets/javascripts/ktv/pin.js.erb
@@ -1387,6 +1387,7 @@ jQuery.zm = {};
                     window.location = "/login"
                 } else {
                     if (data && data.throwable) {} else {
+                      if (typeof realCallback != 'undefined')
                         realCallback(data)
                     }
                 }
@@ -4095,7 +4096,7 @@ im.zm.autoLayout.prototype = {
         var q = "";
         var a, d;
         J.isSurprise ? d = "price-label small-label-gift" : d = "price-label small-label";
-        a = '<div class="' + d + '"><span class="leftfold png"></span><span class="rightfold png"><a href="/topics/'+picBoard[j].boardId+'">' + picBoard[j].price + "</a></span></div>";
+        a = '<div class="' + d + '"><span class="leftfold png"></span><span class="rightfold png"><a href="/topics/'+picBoard[j].boardId+'"'+(window.psvr_is_ie ? ' style="color:white"' : '')+'>' + picBoard[j].price + "</a></span></div>";
         if (picBoard[j].isSurprise) {
             a = '<div class="' + d + '"><span class="leftfold png"></span><span class="rightfold png">免费中</span></div>'
         }
@@ -5165,7 +5166,7 @@ window.autoLayout = {
                 } else {
                     surpriseClass = "price-label small-label"
                 }
-                priceCon = '<div class="' + surpriseClass + '"><span class="leftfold png"></span><span class="rightfold png"><a href="/topics/'+picBoard[j].boardId+'">' + picBoard[j].price + "</a></span></div>"
+                priceCon = '<div class="' + surpriseClass + '"><span class="leftfold png"></span><span class="rightfold png"><a href="/topics/'+picBoard[j].boardId+'"'+(window.psvr_is_ie ? ' style="color:white"' : '')+'>' + picBoard[j].price + "</a></span></div>"
                 // if (parseInt(picBoard[j].price)) {
                 //     priceCon = '<div class="' + surpriseClass + '"><span class="leftfold png"></span><span class="rightfold png">¥' + Math.floor(picBoard[j].price) / 100 + "</span></div>"
                 // } else {
