--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!-- Consider adding a manifest.appcache: h5bp.com/d/Offline -->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+  <% @is_ie=true %>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -97,7 +98,7 @@
     <div class="wrapper">
       <h1><a href="/" id="core_logotext_wrap"><%= image_tag "logotext-all.png",:alt => "课件交流系统",:id=>'core_logotext' %></a></h1>
       <form accept-charset="UTF-8" action="/search" id="search_form" method="get" data-width-tobe="730">
-        <input type="text" id="q" name="q" value="" class="placeholded" placeholder="快速搜索领域、用户及资源..." />
+        <input type="text" id="q" name="q" value="" class="placeholded" placeholder="搜索领域、用户及资源..." />
       </form>
       <div class="navigation">
         <ul>
@@ -131,18 +132,20 @@
 </div>
 
 <% if @is_ie %>
-
+  <%= content_for :butt2 do %>
+    Asks.completeAll($("#q"));
+  <% end %>
 <% else %>
-<div style="background:none repeat scroll 0 0 #F5F5F5" id="results_tray_div">
-<div class="wrapper">
-<div class="__qua" id="results_tray" data-data-height="32" style="height:0px">
-<div id="__w2_bOT1DHU_results_frame" class="results_frame new_results_frame">
-  <ul id="core_search_ul">
-<li class="instruction" id="__w2_eqidaIV_list_item_0"><a class="result_item" href="#">请输入汉字或拼音作为关键词，这里将立即显示搜索结果</a></li>
-  </ul></div>
-</div>
-</div>
-</div>
+  <div style="background:none repeat scroll 0 0 #F5F5F5" id="results_tray_div">
+  <div class="wrapper">
+  <div class="__qua" id="results_tray" data-data-height="32" style="height:0px">
+  <div id="__w2_bOT1DHU_results_frame" class="results_frame new_results_frame">
+    <ul id="core_search_ul">
+  <li class="instruction" id="__w2_eqidaIV_list_item_0"><a class="result_item" href="#">请输入汉字或拼音作为关键词，这里将立即显示搜索结果</a></li>
+    </ul></div>
+  </div>
+  </div>
+  </div>
 <% end %>
 
 <div class="__sdk">
@@ -293,6 +296,7 @@
   <!-- JavaScript at the bottom for fast page loading -->
 
   <%= javascript_include_tag "ktv/application" %>
+  <%= javascript_include_tag !@is_ie ? "jquery.ui.autocomplete.js" : "jquery.autocomplete.js" %>
   <script type="text/javascript" charset="utf-8">
     jQuery(function(){
       <%= yield :butt2 %>
