--- a/trunk/app/views/users/invite.html.erb
+++ b/trunk/app/views/users/invite.html.erb
@@ -72,11 +72,11 @@
 <% end %>
 <% content_for :butt2 do %>
 $('#user_name').blur(function(){
-  KTV.checkUsername(this);
+  App.checkUsername(this);
   return true;
 });
 $('#user_email').blur(function(){
-  KTV.checkEmail(this);
+  App.checkEmail(this);
   return true;
 });
 <% end %>
