--- a/trunk/app/views/devise/registrations/edit.html.erb
+++ b/trunk/app/views/devise/registrations/edit.html.erb
@@ -103,7 +103,7 @@ $('#change_password_link').click(function(){
 <% end %>
 <% content_for :butt2 do %>
 $('#user_name').blur(function(){
-  KTV.checkUsername(this);
+  App.checkUsername(this);
   return true;
 });
 $('#submit_btn').unbind('click').click(function(event){
