--- a/trunk/app/views/layouts/application.html.erb
+++ b/trunk/app/views/layouts/application.html.erb
@@ -5,7 +5,6 @@
 <!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
 <!-- Consider adding a manifest.appcache: h5bp.com/d/Offline -->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-  <% @is_ie=true %>
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
@@ -27,6 +26,7 @@
   <%= csrf_meta_tag %>
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
 
+  <script src="/js/plugins.js" type="text/javascript"></script>
   <script src="/DOM-shim/test/resources/es5-shim.js"></script>
   <!--[if lte IE 8]>
   <script src="/DOM-shim/lib/DOM-shim-ie8.js"></script>
