--- a/trunk/app/views/layouts/application_for_devise.html.erb
+++ b/trunk/app/views/layouts/application_for_devise.html.erb
@@ -11,6 +11,7 @@
   <meta name="keywords" content="<%= @seo[:keywords] %>" />
   <meta name="description" content="<%= @seo[:description] %>" />
   <meta name="description" content="">
+  <script src="/js/plugins.js" type="text/javascript"></script>
   <script src="/js/libs/modernizr-2.5.3.min.js"></script>
   <meta name="viewport" content="width=device-width">
   <%= stylesheet_link_tag    "ktv/ie/application", :media => "all" %>
