--- a/trunk/app/views/layouts/embedded.html.erb
+++ b/trunk/app/views/layouts/embedded.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title><%=@seo[:title]%> - Kejian.TV课件交流系统</title>
+  <script src="/js/plugins.js" type="text/javascript"></script>
   <%= yield :armpit %>
   <!--[if IE]>
   <style>
